finish route
