# src/go-server-server-generated/go/routers.go
@@ -3,7 +3,7 @@
  *
  * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
  *
- * API version: 0.0.3
+ * API version: 0.1.0
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
 package swagger
@@ -55,10 +55,115 @@ var routes = Routes{
 	},
 
 	Route{
+		"CreateArticle",
+		strings.ToUpper("Post"),
+		"/users/{userid}/articles/new",
+		CreateArticle,
+	},
+
+	Route{
+		"DeleteArticle",
+		strings.ToUpper("Delete"),
+		"/users/{userid}/articles/{articleid}",
+		DeleteArticle,
+	},
+
+	Route{
+		"GetArticle",
+		strings.ToUpper("Get"),
+		"/api/users/{userid}/articles/{articleid}",
+		GetArticle,
+	},
+
+	Route{
+		"GetArticlePage",
+		strings.ToUpper("Get"),
+		"/users/{userid}/articles/{articleid}",
+		GetArticlePage,
+	},
+
+	Route{
 		"GetArticles",
 		strings.ToUpper("Get"),
 		"/api/users/{userid}/articles",
 		GetArticles,
+	},
+
+	Route{
+		"GetArticlesPage",
+		strings.ToUpper("Get"),
+		"/users/{userid}/articles",
+		GetArticlesPage,
+	},
+
+	Route{
+		"GetCreateArticlePage",
+		strings.ToUpper("Get"),
+		"/users/{userid}/articles/new",
+		GetCreateArticlePage,
+	},
+
+	Route{
+		"LikeArticle",
+		strings.ToUpper("Put"),
+		"/users/{userid}/articles/{articleid}/like",
+		LikeArticle,
+	},
+
+	Route{
+		"UpdateArticle",
+		strings.ToUpper("Put"),
+		"/users/{userid}/articles/{articleid}",
+		UpdateArticle,
+	},
+
+	Route{
+		"CreateReply",
+		strings.ToUpper("Post"),
+		"/users/{userid}/articles/{articleid}/replies/new",
+		CreateReply,
+	},
+
+	Route{
+		"GetReplies",
+		strings.ToUpper("Get"),
+		"/api/users/{userid}/articles/{articleid}/replies",
+		GetReplies,
+	},
+
+	Route{
+		"GetReply",
+		strings.ToUpper("Get"),
+		"/api/users/{userid}/articles/{articleid}/replies/{replyid}",
+		GetReply,
+	},
+
+	Route{
+		"LikeReply",
+		strings.ToUpper("Put"),
+		"/users/{userid}/articles/{articleid}/replies/{replyid}/like",
+		LikeReply,
+	},
+
+	Route{
+		"GetArticlesPageByTag",
+		strings.ToUpper("Get"),
+		"/tags/{tagname}",
+		GetArticlesPageByTag,
+	},
+
+	Route{
+		"GetTags",
+		strings.ToUpper("Get"),
+		"/api/tags",
+		GetTags,
+	},
+
+	Route{
+		"SearchArticlesByTag",
+		strings.ToUpper("Get"),
+		"/api/tags/{tagname}",
+		SearchArticlesByTag,
 	},
 
 	Route{
@@ -69,6 +174,13 @@ var routes = Routes{
 	},
 
 	Route{
+		"GetSignupPage",
+		strings.ToUpper("Get"),
+		"/users/signup",
+		GetSignupPage,
+	},
+
+	Route{
 		"GetUserInfo",
 		strings.ToUpper("Get"),
 		"/api/users/{userid}",
@@ -76,10 +188,10 @@ var routes = Routes{
 	},
 
 	Route{
-		"GetUserProfile",
+		"GetUserPage",
 		strings.ToUpper("Get"),
 		"/users/{userid}",
-		GetUserProfile,
+		GetUserPage,
 	},
 
 	Route{
@@ -112,7 +224,7 @@ var routes = Routes{
 
 	Route{
 		"UserSignup",
-		strings.ToUpper("Get"),
+		strings.ToUpper("Post"),
 		"/users/signup",
 		UserSignup,
 	},
